# gitinspector

./: .env.example  .gitignore  README.md  pyproject.toml
src/gitinspector/: __init__.py  config.py  github_client.py  main.py  mcp_server.py  models.py  rag.py  review_comments.py  reviewer.py  security.py  service.py  state.py  workflow.py
tests/: test_models.py  test_rag.py  test_review_comments.py  test_security.py  test_state.py  test_workflow.py
