[project]
name = "gitinspector"
version = "0.1.0"
description = "A fully local, MCP-powered GitHub pull request review agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "langgraph>=0.2,<1",
    "mcp>=1.9,<2",
    "posthog<6",
    "pydantic-settings>=2.7,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitinspector"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:The default value of `allowed_objects` will change.*:langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
]
